2003-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInfoPanel.m: Draw authors in the order they occur in
	the info.plist

2003-05-14 Serg Stoyan <stoyan@on.com.ua>

	* Source/NSMenuView.m 
	(-setFont:): Set cell height at least to 20 pixels.
	
2003-05-13 20:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSButton.m (-setState:, -setNextState): Mark the view
	as needing display, don't force a display.

	* Source/NSWindow.m (-_terminateBackendWindow): Set _windowNum to 0
	so the window will be recreated the next time it is needed.

2003-05-12 17:30  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSView.m (-lockFocusInRect:): Don't save the clipping path
	in the gstate if one is allocated since it depends on the rectangle
	focus is locked in.

2003-05-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Add support for generic application icon.
	Reduce private method name pollution a little.
	* Images/common_UnknownApplication.tiff: copied from WM ...
	* Images/common_UnknownTool.tiff: similar image for unix cmd-line tools.
	* Source/NSApplication.m: Add some user info to the launch
	notification (provided by urbanek@host.sk).

2003-05-05  Michael Hanni   <michael@deviant-behavior.com>

	* Source/NSTabView.m: implemented 
	selectTabViewItemWithIdentifier:.

2003-05-05 22:48  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m,
	Source/GSHorizontalTypesetter.m: Detect and handle gaps in the soft
	invalidated layout information.

2003-05-02  Adam Fedor  <fedor@gnu.org>

	* Documentation/Gui/GNUmakefile: Remove GNUSTEP_MAKEFILES.
	* Source/DocMakefile: Idem.

2003-05-02  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.h
	* TextConverters/RTF/RTFProducer.m
	New implemtation by Axel "Mikesch" Katerbau (axel@objectpark.org)
	with small changes from me. RTF output now support much more
	attributes and even Unicode characters. 
	* Source/NSBezierPath.m